--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Jekyll v3.8.6">
-  <title>Damian Słuja</title>
+  <title>Album example · Bootstrap</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -54,46 +54,29 @@
         <ul class="navbar-nav ml-auto">
             <a class="nav-link" href="https://www.linkedin.com/in/damian-s%C5%82uja-8104151a/">Linkedin</a>
             <a class="nav-link" href="{% static 'free_printable_daily_schedule_form_template.pdf' %}">Resume</a>
-            <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+            <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </ul>
       </div>
     </nav>
   </header>
 
   <main role="main">
+    <div class="container">
 
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1>Welcome!</h1>
-        <p class="lead text-muted">Hey, I'm Damian and it's my first Django website. Hope that you will find it usefull.</p>
-        <p>
-          <img src="{% static 'DSS.jpg' %}" height=300/>
-        </p>
-        <a href="mailto:damiansluja@gmail.com" class="btn btn-primary my-2">Email me</a>
-      </div>
-    </section>
+    <h1 class="text-center pt-3">Welcome to Damian's Blog</h1>
+    <br />
+    <br />
+    <h2>Latest Posts</h2>
+    <hr />
 
-    <div class="album py-5 bg-light">
-      <div class="container">
-
-        <div class="row">
-
-          {% for job in jobs.all %}
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-              <img class="card-img-top" src="{{ job.image.url }}" />
-              <div class="card-body">
-                <p class="card-text">{{ job.summary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-
-        </div>
-      </div>
-    </div>
-
-  </main>
+  {% for blog in blogs.all %}
+  <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+  {{ blog.pub_date_pretty }}
+  <br />
+  <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200 />
+  <br />
+  <p>{{ blog.summary }}</p>
+  {% endfor %}
 
   <footer class="text-muted">
     <div class="container text-center">
